# hugin

./: CMakeLists.txt  Changes.txt  README  authors.txt  rev.txt
CMakeModules/: FindOpenMPMac.cmake  FindVIGRA.cmake  win_bundle.cmake
doc/: CMakeLists.txt  assistant_file_format.txt  cpfind.pod  executor_file_format.txt
mac/: CopyTranslations.sh  DmgDS_Store.in  DmgScript.scpt  PackageCreateToolsLibs.sh  PackageMacAppBundleLibs.sh  configure-bundle.sh
mac/ExternalPrograms/: readme.txt
mac/ExternalPrograms/patches/: vigra-patch-include-vigra-hdf5impex.hxx.diff
mac/ExternalPrograms/scripts/: SetEnv.sh  boost.sh  build-all.sh  download-all.sh  enblend.sh  fftw.sh  gettext.sh  gsl.sh  ilmbase.sh  lcms2.sh  libexiv2.sh  libffi.sh  libglew.sh  libglib2.sh  libjpeg.sh  libomp.sh  libpng.sh  libtiff.sh  openexr.sh  pano13.sh  vigra.sh  wxmac.sh
src/: CMakeLists.txt  hugin_shared.h
src/celeste/: Main.cpp
src/deghosting/: deghosting_mask.cpp  khan.h
src/foreign/levmar/: Axb_core.c
src/hugin1/: CMakeLists.txt
src/hugin1/base_wx/: AssistantExecutor.cpp  AssistantExecutor.h  CMakeLists.txt  CommandHistory.cpp  CommandHistory.h  Executor.cpp  Executor.h  GraphTools.cpp  GraphTools.h  HFOVDialog.cpp  LensTools.cpp  MyExternalCmdExecDialog.cpp  MyExternalCmdExecDialog.h  MyProgressDialog.cpp  PTWXDlg.cpp  PanoCommand.cpp  PanoCommand.h  StitchingExecutor.cpp  hugin_exiftool_final_example.arg  platform.cpp  platform.h  wxImageCache.cpp  wxPanoCommand.cpp  wxPlatform.cpp  wxPlatform.h  wxcms.cpp
src/hugin1/calibrate_lens/: CMakeLists.txt  LensCalApp.cpp  LensCalFrame.cpp  LensCalFrame.h  LensCalImageCtrl.cpp
src/hugin1/executor/: CMakeLists.txt  blended_stacks.executor  duallens.assistant  fused_layers.executor  hdr_pano.executor  hugin_executor.cpp  median_stack.executor  multirow.assistant  normal.assistant  normal_enblend.executor  normal_enblend_cubic.executor  normal_layered_tiff.executor  normal_smartblend.executor  scanned.assistant  scanned2.assistant  stacked.assistant  zeronoise.executor
src/hugin1/hugin/: AboutDialog.cpp  CMakeLists.txt  CPDetectorDialog.cpp  CPEditorPanel.cpp  CPImageCtrl.cpp  CPImageCtrl.h  CPImagesComboBox.cpp  CPImagesComboBox.h  CPListFrame.cpp  ChangeImageVariableDialog.cpp  ChangeImageVariableDialog.h  DragTool.cpp  GLPreviewFrame.cpp  GLPreviewFrame.h  GLRenderer.cpp  GLViewer.cpp  GLViewer.h  HDRMergeOptionDialog.cpp  HtmlWindow.h  ImageVariableDialog.cpp  ImageVariableDialog.h  ImagesList.cpp  ImagesList.h  ImagesPanel.cpp  ImagesTree.cpp  ImagesTree.h  LocalizedFileTipProvider.cpp  MainFrame.cpp  MainFrame.h  MaskEditorPanel.cpp  MaskEditorPanel.h  MaskImageCtrl.cpp  MaskImageCtrl.h  MeshManager.cpp  MeshManager.h  OptimizePanel.cpp  OptimizePanel.h  OptimizePhotometricPanel.cpp  OptimizePhotometricPanel.h  OverviewOutlinesTool.cpp  (+28 more)
src/hugin1/hugin/xrc/: about.xrc  batch_frame.xrc  batch_menu.xrc  batch_toolbar.xrc  cp_editor_panel.xrc  cp_list_frame.xrc  cpdetector_dialog.xrc  dlg_warning.xrc  edit_script_dialog.xrc  image_variable_dlg.xrc  images_panel.xrc  lenscal_frame.xrc  lensdb_dialogs.xrc  main_frame.xrc  main_menu.xrc  main_tool.xrc  mask_editor_panel.xrc  optimize_panel.xrc  optimize_photo_panel.xrc  pano_panel.xrc  pref_dialog.xrc  preview_frame.xrc  reset_dialog.xrc
src/hugin1/hugin/xrc/data/: CMakeLists.txt  expressions.ini  intro.htm  tips.txt
src/hugin1/hugin/xrc/data/help_en_EN/: 16bit.html  16bit_workflow_with_hugin.html  Aliasing.html  Align_a_stack_of_photos.html  Align_image_stack.html  Alpha_channel.html  Aspect_Ratio.html  Autooptimiser.html  Autopano-sift-C.html  Autopano-sift.html  Autopano.html  Banding.html  Barrel_distortion.html  Bracketing.html  CCD.html  Calibrate_lens_gui.html  Camera_response_curve.html  Celeste_standalone.html  Checkpto.html  Chromatic_aberration.html  Color_correct_tiff.html  Colour_profile.html  Contrast.html  Control_Point_Detector_Parameters.html  (+146 more)
src/hugin1/icpfind/: AutoCtrlPointCreator.cpp  CMakeLists.txt  CPDetectorConfig.cpp
src/hugin1/ptbatcher/: Batch.cpp  BatchFrame.cpp  BatchFrame.h  BatchTrayIcon.cpp  BatchTrayIcon.h  CMakeLists.txt  FindPanoDialog.cpp  PTBatcherGUI.cpp  PTBatcherGUI.h  ProjectListBox.cpp  ProjectListBox.h
src/hugin1/stitch_project/: CMakeLists.txt  hugin_stitch_project.cpp
src/hugin_base/: CMakeLists.txt
src/hugin_base/algorithms/basic/: CalculateCPStatistics.cpp  CalculateCPStatistics.h  CalculateOverlap.cpp
src/hugin_base/algorithms/control_points/: CleanCP.cpp
src/hugin_base/algorithms/nona/: CalculateFOV.cpp  CenterHorizontally.cpp
src/hugin_base/algorithms/optimizer/: PhotometricOptimizer.cpp  PhotometricOptimizer.h
src/hugin_base/algorithms/point_sampler/: PointSampler.cpp  PointSampler.h
src/hugin_base/appbase/: ProgressDisplay.h
src/hugin_base/hugin_utils/: utils.cpp  utils.h
src/hugin_base/huginapp/: ImageCache.cpp  ImageCache.h
src/hugin_base/lensdb/: LensDB.cpp
src/hugin_base/lines/: FindLines.h
src/hugin_base/nona/: ImageRemapper.h  RemappedPanoImage.h  Stitcher.cpp  Stitcher.h
src/hugin_base/panodata/: Exiv2Helper.cpp  Exiv2Helper.h  Panorama.cpp  Panorama.h  ParseExp.cpp  ParseExp.h  SrcPanoImage.cpp
src/hugin_base/photometric/: ResponseTransform.h
src/hugin_base/vigra_ext/: HDRUtils.h  ImageTransformsGPU.cpp  Pyramid.h  tiffUtils.h  utils.h
src/hugin_cpfind/cpfind/: PanoDetector.cpp  PanoDetector.h  PanoDetectorLogic.cpp  Utils.cpp  main.cpp
src/hugin_script_interface/plugins/: woa.py
src/tools/: CMakeLists.txt  ExtractPoints.h  align_image_stack.cpp  autooptimiser.cpp  checkpto.cpp  cpclean.cpp  fulla.cpp  geocpset.cpp  hugin_hdrmerge.cpp  hugin_lensdb.cpp  linefind.cpp  nona.cpp  pano_modify.cpp  pano_trafo.cpp  pto_gen.cpp  pto_lensstack.cpp  pto_mask.cpp  pto_merge.cpp  pto_move.cpp  pto_template.cpp  pto_var.cpp  stacker.cpp  tca_correct.cpp  verdandi.cpp  vig_optimize.cpp
src/translations/: ca_ES.po  ca_ES@valencia.po  cs_CZ.po  da.po  de.po  en_GB.po  es.po  eu.po  fi.po  fr.po  hu.po  hugin.pot  it.po  ja.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  zh_CN.po  zh_TW.po
